Fix up forum post and comment header spacing css

--- a/src/app/components/forum/post/post-wall.component.scss
+++ b/src/app/components/forum/post/post-wall.component.scss
@@ -23,6 +23,7 @@
   align-content: center;
   justify-content: space-between;
   align-items: center;
+  gap: 1rem;
 
   form {
     display: inline-flex;
